<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.jydp.obqr.viewmodel.BillViewModel" />

        <variable
            name="listener"
            type="com.jydp.obqr.listener.LoginListener" />
    </data>



    <www.linwg.org.lib.LCardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:cardBackgroundColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shadowColor="@color/greay1"
        app:shadowFluidShape="linear"
        app:shadowSize="10dp"
        app:shadowStartAlpha="300"
        app:yOffset="-5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/block_bg"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/tab1_zhodan"
                        android:textColor="@color/text_bg"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/tv_tag_rank"
                        android:layout_below="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/tv_rank"
                        android:text="@string/tab1_ranking"
                        android:textColor="@color/color_4139"
                        android:layout_marginTop="-20dp"
                        android:textSize="11dp"


                        />

                    <TextView
                        android:id="@+id/tv_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tv_tag_rank"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/tab1_rankNumber"
                        android:textColor="@color/color_4139"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_rank"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="21dp"
                        android:minHeight="8dp"
                        android:textSize="8dp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#8B7159" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/tv_tag_hua"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginLeft="7dp"
                        android:background="@mipmap/taohua" />

                    <TextView
                        android:id="@+id/tv_tableNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_toRightOf="@+id/tv_tag_hua"
                        android:text="@string/tab1_tableNumber"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/tv_tableNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_toRightOf="@+id/tv_tableNum"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />

                    <ImageView
                        android:id="@+id/tv_tag_hua2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginLeft="61dp"
                        android:layout_toRightOf="@+id/tv_tableNumber"
                        android:background="@mipmap/taohua" />

                    <TextView
                        android:id="@+id/tv_people"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_toRightOf="@+id/tv_tag_hua2"
                        android:text="@string/tab1_peopleNumber"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/tv_peopleNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_toRightOf="@+id/tv_people"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />
                </RelativeLayout>



                <LinearLayout
                    android:id="@+id/rt3_top_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:background="@color/listbg"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/tab1_term"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/tab1_Varieties"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="5dp"
                        android:text="@string/tab1_Number"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/tab1_Amount"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tab3_list_left"
                    android:layout_width="match_parent"
                    android:layout_height="230dp" />

<!--                <ListView-->
<!--                    android:id="@+id/tab1_list_left_guqing"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="250dp" />-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/greay" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_tag_sum_star"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/tab1_sum_star"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/tv_sumNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toRightOf="@+id/tv_tag_sum_star"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_tag_sum_star"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/tv_tag_sum_star"
                        android:textColor="@color/color_4139"
                        android:textSize="13dp"/>

                    <TextView
                        android:id="@+id/tv_tag_sum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_tag_sum_star"
                        app:layout_constraintLeft_toRightOf="@+id/tv_sumNumber"
                        android:layout_toRightOf="@+id/tv_sumNumber"
                        android:text="@string/tab1_sumTerm"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/tv_allMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_tag_sum_star"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginRight="20dp"
                        android:layout_toRightOf="@+id/tag2"
                        android:textColor="@color/color_4139"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/tag2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_allMoney"
                        app:layout_constraintRight_toLeftOf="@+id/tv_allMoney"
                        android:layout_marginRight="5dp"
                        android:layout_toRightOf="@+id/tv_tag_sum"
                        android:text="@string/tab1_totalPrice"
                        android:textColor="@color/text_bg"
                        android:textSize="11dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/greay" />
                <LinearLayout
                    android:id="@+id/tab3_status_1_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:layout_marginTop="@dimen/dp_10">
                    <TextView
                        android:id="@+id/tongyi_btn"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/agree"
                        android:drawablePadding="5dp"
                        android:text="@string/tab3_btn_3"
                        android:textSize="11sp"
                        android:gravity="center"
                        android:textColor="@color/ordertv"/>
                    <TextView
                        android:id="@+id/jujue_btn"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/bill"
                        android:text="@string/tab3_btn_4"
                        android:drawablePadding="5dp"
                        android:textSize="11sp"
                        android:gravity="center"
                        android:textColor="@color/ordertv"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab3_status_2_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:layout_marginTop="@dimen/dp_10">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/deal"
                        android:drawablePadding="5dp"
                        android:text="@string/tab3_btn_5"
                        android:textSize="11sp"
                        android:gravity="center"
                        android:textColor="@color/ordertv"/>

                    <TextView
                        android:id="@+id/lft3_print_1"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/icon_print"
                        android:drawablePadding="5dp"
                        android:text="@string/tab3_btn_6"
                        android:textSize="11sp"
                        android:gravity="center"
                        android:textColor="@color/ordertv"/>
                    <TextView
                        android:id="@+id/lft3_print_2"
                        android:layout_width="0dp"
                        android:visibility="gone"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/icon_print"
                        android:drawablePadding="5dp"
                        android:text="@string/tab3_btn_7"
                        android:textSize="11sp"
                        android:gravity="center"
                        android:textColor="@color/ordertv"/>

                </LinearLayout>
            </LinearLayout>
    </www.linwg.org.lib.LCardView>

</layout>